[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Characters/Forker.png" type="Texture" id=2]
[ext_resource path="res://Equipment/SpinSlashSword.tscn" type="PackedScene" id=3]
[ext_resource path="res://Equipment/Minigun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Conversation/ConvoScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://Conversation/Reactions/Reactions.tscn" type="PackedScene" id=7]
[ext_resource path="res://Conversation/Reactions/ReactParticles.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 18.1235

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.574
height = 0.761993

[sub_resource type="CircleShape2D" id=3]
radius = 23.2389

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
orbit_velocity = 1.8
orbit_velocity_random = 0.0

[sub_resource type="Animation" id=5]
resource_name = "React"
tracks/0/type = "value"
tracks/0/path = NodePath("Reactions:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Reactions:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "returnConvoNode"
tracks/0/type = "value"
tracks/0/path = NodePath("ConvoScene:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ConvoScene:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.00392157 ) ]
}

[node name="PlayerNode" type="KinematicBody2D" groups=[
"player",
]]
z_index = 2
collision_layer = 9
collision_mask = 33
script = ExtResource( 1 )
equipmentSlot = [ ExtResource( 3 ), ExtResource( 4 ) ]

[node name="Area2D" type="Area2D" parent="." groups=[
"player",
]]
collision_layer = 4
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 43.2906, 22.4888, -0.800323, 32.4192, -51.6438, 2.62805, -1.99196, -33.1213, 44.085, -12.0689 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SkillTween" type="Tween" parent="."]

[node name="SkillReturnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ConvoScene" parent="." instance=ExtResource( 6 )]
visible = false
modulate = Color( 1, 1, 1, 1 )
position = Vector2( 80, -70 )
scale = Vector2( 1, 1 )
monitoring = false
monitorable = false

[node name="InterfaceSignal" type="Area2D" parent="." groups=[
"interfacesignal",
]]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InterfaceSignal"]
shape = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="InterfaceSignal"]
position = Vector2( 0.340546, 23.0956 )
scale = Vector2( 2, 2 )
amount = 5
speed_scale = 0.5
explosiveness = 0.5
process_material = SubResource( 4 )

[node name="Reactions" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -100 )
scale = Vector2( 1.2, 1.2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/React = SubResource( 5 )
anims/returnConvoNode = SubResource( 6 )

[node name="ReactParticles" parent="." instance=ExtResource( 9 )]
emitting = false
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
frame = 1

[node name="EquippedItemNode" type="Node2D" parent="."]

[node name="HungerTimer" type="Timer" parent="."]
autostart = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="SkillReturnTimer" to="." method="_on_SkillReturnTimer_timeout"]
[connection signal="body_entered" from="InterfaceSignal" to="." method="_on_InterfaceSignal_body_entered"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
